[package]
name = "arithmetic_opertations"
version = "0.1.0"
edition = "2021"

[lib]
name = "arithmetic_opertations"
crate-type = ["cdylib"]  # Use "cdylib" for both Windows and Linux

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
